--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "framework7": "^5.7.8",
+    "framework7-react": "^5.7.8",
     "onsenui": "^2.10.10",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
