--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.10",
+    "@material-ui/core": "^4.10.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "axios": "^0.19.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "framework7": "^5.7.8",
     "onsenui": "^2.10.10",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-onsenui": "^1.11.2",
+    "react-router-dom": "^5.2.0",
     "react_ujs": "^2.6.1",
     "turbolinks": "^5.2.0"
   },
